--- a/cart-client/package.json
+++ b/cart-client/package.json
@@ -13,8 +13,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0",
-    "@nuxtjs/axios": "^5.0.0"
+    "@nuxtjs/axios": "^5.0.0",
+    "nuxt": "^2.3.4"
   },
   "devDependencies": {
     "autoprefixer": "^8.6.4",
